# rust-crud-nosql-api

./: .dockerignore  .env  .env.dev  .env.prod  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/articles/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs  utils.rs
src/auth/: handlers.rs  models.rs
src/environment/: mod.rs
src/error/: handlers.rs  mod.rs
src/users/: handlers.rs  models.rs  service.rs  utils.rs
